testData/inspections/go-defer-function-call/funcLiteral.go
package main

func _() {
    go <error descr="Expression in go must be function call">fu<caret>nc(){}</error>
}